Refactor accordion and update image class
Replaced the image class and updated accordion structure for better organization.

--- a/toprated.html
+++ b/toprated.html
@@ -259,7 +259,7 @@ Tim Murphy: Joseph Mazzello</li>
                         2.The Shawshank Redemption (1994)
                     </h3>
                     <img
-                        class="img-fluid img-thumbnail"
+                        class="https://codehs.com/uploads/95726aeab3bd62962468e6b053072b00"
                         src="/sports-q-c-140-140-3.jpg"
                         alt="Bike"
                     />
@@ -271,67 +271,35 @@ Tim Murphy: Joseph Mazzello</li>
                     </p>
                 </div>
                 <div class="col-4">
-                    <div
-                        class="accordion"
-                        id="accordion-b9b20f00-0d1e-4a51-8503-47de63b7993d"
-                    >
-                        <div class="accordion-item">
-                            <h2
-                                class="accordion-header"
-                                id="heading1-b9b20f00-0d1e-4a51-8503-47de63b7993d"
-                            >
-                                <button
-                                    class="accordion-button "
-                                    type="button"
-                                    data-bs-toggle="collapse"
-                                    data-bs-target="#content1-b9b20f00-0d1e-4a51-8503-47de63b7993d"
-                                    aria-expanded="true"
-                                    aria-controls="content1-b9b20f00-0d1e-4a51-8503-47de63b7993d"
-                                >
-                                    Awards
-                                </button>
-                            </h2>
-                            <div
-                                class="accordion-collapse collapse show"
-                                id="content1-b9b20f00-0d1e-4a51-8503-47de63b7993d"
-                                aria-labelledby="heading1-b9b20f00-0d1e-4a51-8503-47de63b7993d"
-                                data-bs-parent="#accordion-b9b20f00-0d1e-4a51-8503-47de63b7993d"
-                            >
-                                <div class="accordion-body">
-                                  <ul>
+
+                  <div class="accordion" id="accordionExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+        Awards
+      </button>
+    </h2>
+    <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <ul>
                                    <li> Academy Awards (1995): Nominated for 7 Oscars: Best Picture, Actor (Morgan Freeman), Adapted Screenplay, Cinematography, Film Editing, Original Score, and Sound.</li>
 <li>Golden Globe Awards (1995): Nominated for Best Actor (Morgan Freeman) and Best Screenplay.</li>
 <li>Screen Actors Guild (SAG) Awards (1995): Nominated for Outstanding Performance by a Male Actor in a Leading Role (Morgan Freeman and Tim Robbins).</li>
 <li>Directors Guild of America (1995): Nominated for Outstanding Directorial Achievement (Frank Darabont).</li>
 <li>Awards of the Japanese Academy: Won Best Foreign Film. </li>
                                     </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="accordion-item">
-                            <h2
-                                class="accordion-header"
-                                id="heading2-b9b20f00-0d1e-4a51-8503-47de63b7993d"
-                            >
-                                <button
-                                    class="accordion-button collapsed"
-                                    type="button"
-                                    data-bs-toggle="collapse"
-                                    data-bs-target="#content2-b9b20f00-0d1e-4a51-8503-47de63b7993d"
-                                    aria-expanded="false"
-                                    aria-controls="content2-b9b20f00-0d1e-4a51-8503-47de63b7993d"
-                                >
-                                    Key people
-                                </button>
-                            </h2>
-                            <div
-                                class="accordion-collapse collapse "
-                                id="content2-b9b20f00-0d1e-4a51-8503-47de63b7993d"
-                                aria-labelledby="heading2-b9b20f00-0d1e-4a51-8503-47de63b7993d"
-                                data-bs-parent="#accordion-b9b20f00-0d1e-4a51-8503-47de63b7993d"
-                            >
-                                <div class="accordion-body">
-                                    <ul>
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+        Key Figures
+      </button>
+    </h2>
+    <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+         <ul>
 <li>Director/Writer: Frank Darabont</li>
 <li>Source Material: Stephen King (novella Rita Hayworth and Shawshank Redemption)</li>
 <li>Starring Roles: Tim Robbins (Andy Dufresne), Morgan Freeman (Ellis "Red" Redding)</li>
@@ -339,11 +307,12 @@ Tim Murphy: Joseph Mazzello</li>
 <li>Producer: Niki Marvin</li>
 <li>Cinematographer: Roger Deakins</li>
 <li>Editor: Richard Francis-Bruce </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+         </ul>
+ </div>
+    </div>
+  </div>
+</div>
+                  
                 </div>
             </div>
         </div>
