--- a/index.html
+++ b/index.html
@@ -101,19 +101,19 @@
 <br>
         <div class="row">
           <div class="col-md-4">
-             <img src="https://codehs.com/uploads/cd5909bb481f8a8652dada54dd753d73" width="100px">
-            <h3>Enter the Dragon (91%)</h3>
-            <p>Enter the Dragon is about Shaolin martial arts master Lee (Bruce Lee) who goes undercover at a martial arts tournament on a crime lord's private island to investigate his drug-smuggling operation, seeking revenge for his sister's death, forming alliances with other fighters (John Saxon, Jim Kelly), and culminating in an iconic fight against the villain Han in a hall of mirrors.</p>
+             <img src="https://codehs.com/uploads/088ad60c72b202eb0420448a23fe1f59" width="100px">
+            <h3>How to Train Your Dragon (86%)</h3>
+            <p>Hiccup is a Norse teenager from the island of Berk, where fighting dragons is a way of life. His progressive views and weird sense of humor make him a misfit, despite the fact that his father is chief of the clan. Tossed into dragon-fighting school, he endeavors to prove himself as a true Viking, but when he befriends an injured dragon he names Toothless, he has the chance to plot a new course for his people's future.</p>
           </div>
           <div class="col-md-4">
-            <img src="https://codehs.com/uploads/d6a35ad15b06638e7dfdd39f18cca2e9" width="100px">
-            <h3>That's My Boy (25%)</h3>
-            <p>That's My Boy (2012) is an American R-rated comedy film starring Adam Sandler and Andy Samberg, focusing on a dysfunctional father-son reunion. </p>
+            <img src="https://codehs.com/uploads/496aa3f78aa16510ac244aec34e7d5d2" width="100px">
+            <h3>A Quiet Place (86%)</h3>
+            <p>If they hear you, they hunt you. A family must live in silence to avoid mysterious creatures that hunt by sound. Knowing that even the slightest whisper or footstep can bring death, Evelyn and Lee are determined to find a way to protect their children while desperately searching for a way to fight back.</p>
           </div>
           <div class="col-md-4">
-            <img src="https://codehs.com/uploads/78920425eb9e4fc5699246b4398f8250" width="100px">
-            <h3>The Hangover (88%)</h3>
-            <p>The Hangover (2009) is a chaotic, R-rated comedy following three friends who wake up from a bachelor party in Las Vegas with no memory of the night before and a missing groom</p>
+            <img src="https://codehs.com/uploads/b8c562b0ca48d1d1d7532cef9a6c499d" width="100px">
+            <h3>A Quiet Place II (81%)</h3>
+            <p>Following the deadly events at home, the Abbott family must now face the terrors of the outside world as they continue their fight for survival in silence. Forced to venture into the unknown, they quickly realize that the creatures that hunt by sound are not the only threats that lurk beyond the sand path.</p>
           </div>
         </div>
       </div>
