Add accordion buttons and update movie descriptions

--- a/toprated.html
+++ b/toprated.html
@@ -160,6 +160,16 @@
                     <p>
                         Jurassic Park (Directed by Steven Spielberg)  is celebrated for its gripping, cautionary blend of groundbreaking spectacle and philosophical depth, examining the hubris of humanity attempting to control nature. It is deemed a "masterpiece" for its exploration of ambition, science, and the dangers of pursuing technological power without wisdom.
                     </p>
+                   <button
+                                    class="accordion-button "
+                                    type="button"
+                                    data-bs-toggle="collapse"
+                                    data-bs-target="#content1-c46d384c-6aa2-4b65-88e9-cff6d6c35e40"
+                                    aria-expanded="true"
+                                    aria-controls="content1-c46d384c-6aa2-4b65-88e9-cff6d6c35e40"
+                                >
+                                    Key Figures
+                                </button>
                     <ul>
  <li>Director:Steven Spielberg</li>
 <li>Writers: Michael Crichton (novel/screenplay) & David Koepp (screenplay)</li>
@@ -202,13 +212,8 @@ Tim Murphy: Joseph Mazzello</li>
                                     Awards
                                 </button>
                             </h2>
-                            <div
-                                class="accordion-collapse collapse show"
-                                id="content1-c46d384c-6aa2-4b65-88e9-cff6d6c35e40"
-                                aria-labelledby="heading1-c46d384c-6aa2-4b65-88e9-cff6d6c35e40"
-                                data-bs-parent="#accordion-c46d384c-6aa2-4b65-88e9-cff6d6c35e40"
-                            >
-                                <div class="accordion-body">
+                          
+                               <div>
                                   <ul>
                                   <li>  Academy Awards (Oscars) 1994: Best Visual Effects, Best Sound Editing, Best Sound Mixing.</li>
 <li>  BAFTA Awards 1994: Best Special Visual Effects.</li>
@@ -220,8 +225,8 @@ Tim Murphy: Joseph Mazzello</li>
 <li>Critical Acclaim: Recognized for groundbreaking CGI and sound design.</li>
 <li>Cultural Impact: Nominated for Best Cast Ensemble at the ACCA Awards 1993.</li>
                                   </ul>
-                                </div>
-                            </div>
+                             </div>
+                           
                         </div>
                     </div>
                 </div>
@@ -245,6 +250,16 @@ Tim Murphy: Joseph Mazzello</li>
                     <p>
                         The Shawshank Redemption (Direcrted by Frank Darabont) is widely hailed as a masterpiece for its powerful, uplifting story about hope, friendship, and perseverance in the grim setting of a maximum-security prison, following wrongfully convicted banker Andy Dufresne (Tim Robbins) and his bond with inmate Red (Morgan Freeman) over many years, featuring iconic moments of quiet triumph, cathartic justice, and an unforgettable message of finding light in darkness.
                     </p>
+                   <button
+                                    class="accordion-button "
+                                    type="button"
+                                    data-bs-toggle="collapse"
+                                    data-bs-target="#content1-c46d384c-6aa2-4b65-88e9-cff6d6c35e40"
+                                    aria-expanded="true"
+                                    aria-controls="content1-c46d384c-6aa2-4b65-88e9-cff6d6c35e40"
+                                >
+                                    Key Figures
+                                </button>
                            <ul>
 <li>Director/Writer: Frank Darabont</li>
 <li>Source Material: Stephen King (novella Rita Hayworth and Shawshank Redemption)</li>
@@ -258,6 +273,16 @@ Tim Murphy: Joseph Mazzello</li>
                 <div class="col-4">
 
       <div class="accordion-body">
+         <button
+                                    class="accordion-button "
+                                    type="button"
+                                    data-bs-toggle="collapse"
+                                    data-bs-target="#content1-c46d384c-6aa2-4b65-88e9-cff6d6c35e40"
+                                    aria-expanded="true"
+                                    aria-controls="content1-c46d384c-6aa2-4b65-88e9-cff6d6c35e40"
+                                >
+                                    Awards
+                                </button>
         <ul>
                                    <li> Academy Awards (1995): Nominated for 7 Oscars: Best Picture, Actor (Morgan Freeman), Adapted Screenplay, Cinematography, Film Editing, Original Score, and Sound.</li>
 <li>Golden Globe Awards (1995): Nominated for Best Actor (Morgan Freeman) and Best Screenplay.</li>
