--- a/toprated.html
+++ b/toprated.html
@@ -241,7 +241,7 @@ Tim Murphy: Joseph Mazzello</li>
                     </h3>
                     <img
                         class="https://codehs.com/uploads/95726aeab3bd62962468e6b053072b00"
-                        src="/sports-q-c-140-140-3.jpg"
+                        src="https://codehs.com/uploads/95726aeab3bd62962468e6b053072b00"
                         alt="Bike"
                     />
                 </div>
