Add width attribute to image elements
Added width attribute to img tags for better layout.

--- a/toprated.html
+++ b/toprated.html
@@ -152,7 +152,7 @@
                     <img
                         class="img-fluid img-thumbnail"
                         src="https://codehs.com/uploads/95560237f08b587c443ab3b91993c21d"
-                        alt="Bike"
+                        alt="Bike"  width="250px"
                     />
                 </div>
                 <div class="col-4">
@@ -242,7 +242,7 @@ Tim Murphy: Joseph Mazzello</li>
                     <img
                         class="https://codehs.com/uploads/95726aeab3bd62962468e6b053072b00"
                         src="https://codehs.com/uploads/95726aeab3bd62962468e6b053072b00"
-                        alt="Bike"
+                        alt="Bike" width="250px"
                     />
                 </div>
                 <div class="col-4">
@@ -313,7 +313,7 @@ Tim Murphy: Joseph Mazzello</li>
                     <img
                         class="https://codehs.com/uploads/95726aeab3bd62962468e6b053072b00"
                         src="https://codehs.com/uploads/3dba43a72574f7cfeb1a6a29f45c1d31"
-                        alt="Bike"
+                        alt="Bike"  width="250px"
                     />
                 </div>
                 <div class="col-4">
