Update carousel images and movie descriptions

--- a/index.html
+++ b/index.html
@@ -58,31 +58,31 @@
 
         <div id="homeCarousel" class="carousel slide mb-4" data-ride="carousel">
           <ol class="carousel-indicators">
-            <li data-target="https://codehs.com/uploads/87427a903d4326f098d3b90dd7fceee8" data-slide-to="0" class="active"></li>
-            <li data-target="https://codehs.com/uploads/5d737990e1a41fc8bcfb0abfaa460e93" data-slide-to="1"></li>
-            <li data-target="https://codehs.com/uploads/d4be359eb737daf798c6940ed8be36a4" data-slide-to="2"></li>
+            <li data-target="https://codehs.com/uploads/98abce2533de5de26ae24389291c9b80" data-slide-to="0" class="active"></li>
+            <li data-target="https://codehs.com/uploads/9614a5ef099795ab6e9a250daaa2030e" data-slide-to="1"></li>
+            <li data-target="https://codehs.com/uploads/d6be325dce65a863d1fe34b0372bd167" data-slide-to="2"></li>
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="https://codehs.com/uploads/87427a903d4326f098d3b90dd7fceee8" class="d-block w-100" alt="Slide 1" >
+              <img src="https://codehs.com/uploads/98abce2533de5de26ae24389291c9b80" class="d-block w-100" alt="Slide 1" >
               <div class="carousel-caption d-none d-md-block">
                 <h5></h5>
                 <p>
-‘Send Help’ Tops The Weekend Box Office</p>
+Reports from early 2026 indicate that Sebastian Stan has joined the cast of The Batman: Part II (slated for Oct 2027) and is heavily reported to be playing the iconic villain Harvey Dent/Two-Face.</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="https://codehs.com/uploads/5d737990e1a41fc8bcfb0abfaa460e93" class="d-block w-100" alt="Slide 2" >
+              <img src="https://codehs.com/uploads/9614a5ef099795ab6e9a250daaa2030e" class="d-block w-100" alt="Slide 2" >
               <div class="carousel-caption d-none d-md-block">
-                <h5>‘One Battle After Another’</h5>
-                <p>‘One Battle After Another’ Wins Film of the Year at London Critics’ Circle Film Awards</p>
+                <h5>‘Project Hail Mary’</h5>
+                <p>Project Hail Mary general ticket pre-sales will start the same day as early access (2/20)</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="https://codehs.com/uploads/d4be359eb737daf798c6940ed8be36a4" class="d-block w-100" alt="Slide 3" >
+              <img src="https://codehs.com/uploads/d6be325dce65a863d1fe34b0372bd167" class="d-block w-100" alt="Slide 3" >
               <div class="carousel-caption d-none d-md-block">
-                <h5>Zootopia 2</h5>
-                <p>‘Zootopia 2’ Has Grossed $630M In China, The Highest Tally There By A Hollywood Film, Disney Says</p>
+                <h5>'The Odyssey'</h5>
+                <p>Christopher Nolan's 'The Odyssey' set for release on July 17, 2026, will be the first feature film to be shot entirely with 65mm IMAX cameras</p>
               </div>
             </div>
           </div>
@@ -101,19 +101,19 @@
 <br>
         <div class="row">
           <div class="col-md-4">
-             <img src="https://codehs.com/uploads/088ad60c72b202eb0420448a23fe1f59" width="100px">
-            <h3>How to Train Your Dragon (86%)</h3>
-            <p>Hiccup is a Norse teenager from the island of Berk, where fighting dragons is a way of life. His progressive views and weird sense of humor make him a misfit, despite the fact that his father is chief of the clan. Tossed into dragon-fighting school, he endeavors to prove himself as a true Viking, but when he befriends an injured dragon he names Toothless, he has the chance to plot a new course for his people's future.</p>
+             <img src="https://codehs.com/uploads/afe939e35a7304985373b250fe41cc7b" width="100px">
+            <h3>Patriots Day (56%)</h3>
+            <p>Hiccup is a Norse teenager from the island of Berk, where fighting dragons is a way of life. His progressive views and weird sense of humor make him a misfit, despite the fact that his father is chief of the clan. Tossed into dragon-fighting school, he endeavors to prove himself as a true Viking, but when he befriends an injured dragon he names Toothless, he has the chance to plot a new course for his people's future.Tragedy strikes on April 15, 2013, when two bombs explode during the Boston Marathon. In the aftermath of the attack, police Sgt. Tommy Saunders (Mark Wahlberg), FBI Special Agent Richard DesLauriers (Kevin Bacon) and Commissioner Ed Davis (John Goodman) join courageous survivors, first responders and other investigators in a race against the clock to hunt down the suspects and bring them to justice.</p>
           </div>
           <div class="col-md-4">
-            <img src="https://codehs.com/uploads/496aa3f78aa16510ac244aec34e7d5d2" width="100px">
-            <h3>A Quiet Place (86%)</h3>
-            <p>If they hear you, they hunt you. A family must live in silence to avoid mysterious creatures that hunt by sound. Knowing that even the slightest whisper or footstep can bring death, Evelyn and Lee are determined to find a way to protect their children while desperately searching for a way to fight back.</p>
+            <img src="https://codehs.com/uploads/edb3398bd36f2ddf0ee1cd90c5982cda" width="100px">
+            <h3>Avengers: Age of Ultron (86%)</h3>
+            <p>When Tony Stark (Robert Downey Jr.) jump-starts a dormant peacekeeping program, things go terribly awry, forcing him, Thor (Chris Hemsworth), the Incredible Hulk (Mark Ruffalo) and the rest of the Avengers to reassemble. As the fate of Earth hangs in the balance, the team is put to the ultimate test as they battle Ultron, a technological terror hell-bent on human extinction. Along the way, they encounter two mysterious and powerful newcomers, Pietro and Wanda Maximoff.</p>
           </div>
           <div class="col-md-4">
             <img src="https://codehs.com/uploads/b8c562b0ca48d1d1d7532cef9a6c499d" width="100px">
-            <h3>A Quiet Place II (81%)</h3>
-            <p>Following the deadly events at home, the Abbott family must now face the terrors of the outside world as they continue their fight for survival in silence. Forced to venture into the unknown, they quickly realize that the creatures that hunt by sound are not the only threats that lurk beyond the sand path.</p>
+            <h3>Aqua Teen Hunger Force Colon Movie Film for Theaters (51%)</h3>
+            <p>Frylock (Carey Means), Master Shake (Dana Snyder) and Meatwad (Dave Willis), better-known as the Aqua Teen Hunger Force, take appropriate action when an immortal piece of exercise equipment threatens galactic peace. Peril looms ahead when the Plutonians and the Cybernetic Ghost of Christmas Past join forces to seize control of the device.</p>
           </div>
         </div>
       </div>
