Replace Aqua Teen Hunger Force with The Kid movie

--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@ Reports from early 2026 indicate that Sebastian Stan has joined the cast of The 
             <p>When Tony Stark (Robert Downey Jr.) jump-starts a dormant peacekeeping program, things go terribly awry, forcing him, Thor (Chris Hemsworth), the Incredible Hulk (Mark Ruffalo) and the rest of the Avengers to reassemble. As the fate of Earth hangs in the balance, the team is put to the ultimate test as they battle Ultron, a technological terror hell-bent on human extinction. Along the way, they encounter two mysterious and powerful newcomers, Pietro and Wanda Maximoff.</p>
           </div>
           <div class="col-md-4">
-            <img src="https://codehs.com/uploads/b8c562b0ca48d1d1d7532cef9a6c499d" width="100px">
-            <h3>Aqua Teen Hunger Force Colon Movie Film for Theaters (51%)</h3>
-            <p>Frylock (Carey Means), Master Shake (Dana Snyder) and Meatwad (Dave Willis), better-known as the Aqua Teen Hunger Force, take appropriate action when an immortal piece of exercise equipment threatens galactic peace. Peril looms ahead when the Plutonians and the Cybernetic Ghost of Christmas Past join forces to seize control of the device.</p>
+            <img src="https://codehs.com/uploads/b532dfb3a4bb81111429888f213ac2c7" width="100px">
+            <h3>The Kid (45%)</h3>
+            <p>New Mexico Territory, 1880. Rio Cutler and his older sister Sara must abandon their home after an unfortunate event happens. In their desperate flee to Santa Fe, they cross paths with the infamous outlaw Billy the Kid and his gang, who are ruthlessly pursued by a posse led by Sheriff Pat Garret.</p>
           </div>
         </div>
       </div>
