Update movie titles and ratings in ratings.html

--- a/ratings.html
+++ b/ratings.html
@@ -326,26 +326,26 @@
 			<div class="row">
 				<div class="col-md-4">
 					<div class="card">
-						<img class="card-img-top" alt="Bootstrap Thumbnail First" src="https://codehs.com/uploads/4ec915edbf49a657cc21e38f6d78692e" width="50" height="200"/>
+						<img class="card-img-top" alt="Bootstrap Thumbnail First" src="https://codehs.com/uploads/4ed13cbc8ecf56e05a9520624d89446a" width="50" height="200"/>
 						<div class="card-block">
 							<h5 class="card-title">
-								The Fall Guy
+								Dune: Part Two
 							</h5>
 							<p class="card-text">
-								2024 (70%)
+								2024 (90%)
 							</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="card">
-						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/8a12493efe1c58641c229baaf9ab451e" width="50" height="200"/>
+						<img class="card-img-top" alt="Bootstrap Thumbnail Second" src="https://codehs.com/uploads/7580038ce6d4d9df322f427b70151930" width="50" height="200"/>
 						<div class="card-block">
 							<h5 class="card-title">
-								Small Things like These
+								Kraven the Hunter
 							</h5>
 							<p class="card-text">
-								2024 (79%)
+								2024 (32%)
 							</p>
 						</div>
 					</div>
@@ -1283,12 +1283,6 @@
 		  <tr><td>Deadpool & Wolverine</td><td>76%</td><td>2024</td></tr>
 		  <tr><td>Madame Web</td><td>17%</td><td>2024</td></tr>
 		  <tr><td>Venom: The Last Dance</td><td>51%</td><td>2024</td></tr>
-		  <tr><td>Kraven the Hunter</td><td>32%</td><td>2024</td></tr>
-		  <tr><td>Dune: Part 2</td><td>90%</td><td>2024</td></tr>
-		  <tr><td>Ghostbusters: Frozen Empire</td><td>41%</td><td>2024</td></tr>
-		  <tr><td>Beetlejuice Beetlejuice</td><td>66%</td><td>2024</td></tr>
-		   <tr><td>Godzilla x Kong: The New Empire</td><td>52%</td><td>2024</td></tr>
-		   <tr><td>IF</td><td>50%</td><td>2024</td></tr>
 		  
 		  <tr><td>Transformers: Rise of the Beasts </td><td>51%</td><td>2023</td></tr>
 		  <tr><td>Guardians of the Galaxy Vol. 3</td><td>91%</td><td>2023</td></tr>
