Add details for 'Inglourious Basterds' movie

--- a/toprated.html
+++ b/toprated.html
@@ -688,6 +688,81 @@ Nominee: Best Supporting Actor (Mark Wahlberg).</li>
             </div>
         </div>
 
+<br>
+<br>
+<br>
+            <div class="row">
+                <div class="col-4">
+                    <h3 class="h3">
+                        9. Inglourious Basterds (2009) 98%
+                    </h3>
+                    <img
+                        class="top"
+                        src="https://codehs.com/uploads/b051077d9baaf716462cddaff50db85e"
+                        alt="Bike"  width="250px"
+                    />
+                </div>
+                <div class="col-4">
+                    <h2>Description</h2>
+                    <p>
+                     Inglourious Basterds (2009) is widely considered a Quentin Tarantino masterpiece, celebrated for its audacious, genre-bending blend of brutal war drama and revisionist revenge fantasy. It is lauded for impeccable dialogue, intense, slow-burn tension, and a meta-narrative that uses cinema to destroy Nazism. It is an inventive, swaggering film that is both a war movie and a cinematic homage</p>
+                   <button
+                                    class="accordion-button "
+                                    type="button"
+                                    data-bs-toggle="collapse"
+                                    data-bs-target="#content1-c46d384c-6aa2-4b65-88e9-cff6d6c35e40"
+                                    aria-expanded="true"
+                                    aria-controls="content1-c46d384c-6aa2-4b65-88e9-cff6d6c35e40"
+                                >
+                                    Key Figures
+                                </button>
+                           <ul>
+<li>Director & Writer: Quentin Tarantino</li>
+<li>Producer: Lawrence Bender</li>
+<li>Main Cast: Brad Pitt (Aldo Raine), Christoph Waltz (Hans Landa), Mélanie Laurent (Shosanna), Michael Fassbender (Archie Hicox), Diane Kruger (Bridget von Hammersmark), Eli Roth (Donny Donowitz)</li>
+<li>Cinematography: Bob Richardson</li>
+<li>Editing: Sally Menke</li>
+<li>Production Design: David Wasco</li>
+
+         </ul>
+                </div>
+                <div class="col-4">
+
+      <div class="accordion-body">
+         <button
+                                    class="accordion-button "
+                                    type="button"
+                                    data-bs-toggle="collapse"
+                                    data-bs-target="#content1-c46d384c-6aa2-4b65-88e9-cff6d6c35e40"
+                                    aria-expanded="true"
+                                    aria-controls="content1-c46d384c-6aa2-4b65-88e9-cff6d6c35e40"
+                                >
+                                    Awards
+                                </button>
+        <ul>
+                <li> Academy Awards (Oscars):
+Winner: Best Supporting Actor (Christoph Waltz)
+Nominee: Best Picture, Director (Quentin Tarantino), Original Screenplay, Supporting Actor (Waltz), Film Editing, Sound Editing, Sound Mixing, Cinematography.</li>
+<li>Golden Globes:
+Winner: Best Supporting Actor - Motion Picture (Christoph Waltz)
+Nominee: Best Motion Picture - Drama, Director (Quentin Tarantino), Screenplay.</li>
+<li>BAFTA Awards:
+Winner: Best Supporting Actor (Christoph Waltz)
+Nominee: Best Director, Original Screenplay, Cinematography, Editing, Production Design.</li>
+<li>Screen Actors Guild (SAG) Awards:
+Winner: Outstanding Performance by a Male Actor in a Supporting Role (Christoph Waltz)
+Winner: Outstanding Performance by a Cast in a Motion Picture</li>
+<li>Cannes Film Festival:
+Winner: Best Actor (Christoph Waltz)
+Nominee: Palme d'Or (Quentin Tarantino)</li>
+          
+        </ul>
+      </div>
+
+
+          
+            </div>
+        </div>
 
 
 
