Add container class for text color in theater.html

--- a/theater.html
+++ b/theater.html
@@ -15,7 +15,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CinemaSpot- In Theaters</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-  <style> h1 {center-align} body { padding-top: 70px; background-color: 9C1C05; text-color: white;  background-repeat: no-repeat; background-size: cover; background-attachment: fixed;  background-position: center; background-image: url("https://codehs.com/uploads/bd709af0db78b26aa4357d1214d2119d"); }</style>
+  <style> h1 {center-align} .container {text-color: white;} body { padding-top: 70px; background-color: 9C1C05; text-color: white;  background-repeat: no-repeat; background-size: cover; background-attachment: fixed;  background-position: center; background-image: url("https://codehs.com/uploads/bd709af0db78b26aa4357d1214d2119d"); }</style>
 </head>
 <body>
   <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
